# rustycore

./: CLAUDE.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: issue.yml  sql_fix.yml
.github/workflows/: pr-labeler.yml  rust-ci.yml  wow-database-live.yml
crates/bnet-server/: Cargo.toml
crates/bnet-server/src/: ip_location.rs  legacy_password.rs  main.rs  secret_mgr.rs  state.rs
crates/bnet-server/src/realm/: mod.rs
crates/bnet-server/src/rest/: handlers.rs  mod.rs  types.rs
crates/bnet-server/src/rpc/: mod.rs  session.rs
crates/bnet-server/src/rpc/services/: authentication.rs  game_utilities.rs
crates/world-server/: Cargo.toml
crates/world-server/src/: area_trigger_loaded_grid.rs  creature_loaded_grid.rs  gameobject_loaded_grid.rs  main.rs  spawn_store_loader.rs
crates/wow-ai/: Cargo.toml
crates/wow-ai/src/: lib.rs
crates/wow-anticheat/: Cargo.toml
crates/wow-anticheat/src/: lib.rs
crates/wow-chat/src/: hyperlinks.rs  lib.rs  validation.rs
crates/wow-config/src/: lib.rs
crates/wow-constants/src/: conditions.rs  item.rs  lib.rs  opcodes.rs  unit.rs  vehicle.rs
crates/wow-core/: Cargo.toml
crates/wow-core/src/: event_map.rs  guid.rs  ip_location.rs  lib.rs  net.rs  position.rs  random.rs  string.rs  time.rs
crates/wow-crypto/: Cargo.toml
crates/wow-crypto/src/: bnet_srp6.rs  lib.rs  srp6.rs
crates/wow-data/: Cargo.toml
crates/wow-data/src/: access_requirement.rs  area.rs  area_trigger.rs  area_trigger_template.rs  artifact_azerite.rs  battlemaster_list.rs  character_progression.rs  chr_specialization.rs  condition_attachments.rs  conditions.rs  creature_display.rs  creature_equipment.rs  creature_model_info.rs  creature_template.rs  currency.rs  db2_id_store.rs  difficulty.rs  disable_mgr.rs  dungeon_encounter.rs  entities_movement.rs  faction_change.rs  game_tables.rs  game_tele.rs  gameobject_template.rs  gossip.rs  graveyard.rs  hotfix_cache.rs  item.rs  item_appearance.rs  item_bonus.rs  item_class.rs  item_collections.rs  item_currency_cost.rs  item_disenchant_loot.rs  item_equipment.rs  item_extended_cost.rs  item_stats.rs  jump_charge.rs  lib.rs  mail.rs  (+38 more)
crates/wow-database/src/: database.rs  error.rs  lib.rs  loader.rs  params.rs  query_holder.rs  result.rs  transaction.rs  updater.rs
crates/wow-entities/: Cargo.toml
crates/wow-entities/src/: area_trigger.rs  bag.rs  conversation.rs  corpse.rs  creature.rs  dynamic_object.rs  game_object.rs  item.rs  lib.rs  object.rs  object_accessor.rs  pet.rs  player.rs  scene_object.rs  totem.rs  transport.rs  unit.rs  unit_subsystems.rs  update_fields.rs  vehicle.rs  world_object.rs
crates/wow-instances/: Cargo.toml
crates/wow-instances/src/: lib.rs
crates/wow-logging/src/: lib.rs
crates/wow-loot/src/: lib.rs
crates/wow-map/: Cargo.toml
crates/wow-map/src/: cell.rs  coords.rs  grid.rs  grid_unload.rs  lib.rs  manager.rs  map.rs  object_grid_loader.rs  personal_phase.rs  pool.rs  spawn.rs
crates/wow-movement/: Cargo.toml
crates/wow-movement/src/: defines.rs  lib.rs  motion_master.rs  path_generator.rs  spline.rs
crates/wow-movement/src/generators/: confused.rs  follow.rs  formation.rs  home.rs  idle.rs  mod.rs  point.rs  spline_chain.rs
crates/wow-network/: Cargo.toml
crates/wow-network/src/: accept.rs  group_registry.rs  lib.rs  player_registry.rs  world_socket.rs
crates/wow-packet/: Cargo.toml
crates/wow-packet/src/: world_packet.rs
crates/wow-packet/src/packets/: auth.rs  battlenet.rs  character.rs  chat.rs  collection.rs  combat.rs  inspect.rs  instance.rs  item.rs  loot.rs  misc.rs  mod.rs  movement.rs  party.rs  pet.rs  query.rs  quest.rs  reputation.rs  social.rs  spell.rs  talent.rs  totem.rs  trainer.rs  update.rs  vehicle.rs
crates/wow-proto/src/: lib.rs
crates/wow-recastdetour/: Cargo.toml  build.rs
crates/wow-recastdetour/cpp/: detour_c_api.cpp
crates/wow-recastdetour/src/: lib.rs
crates/wow-script/src/: lib.rs
crates/wow-scripts/: Cargo.toml
crates/wow-scripts/src/: lib.rs
crates/wow-world/: Cargo.toml
crates/wow-world/_attic/: FASE2_SUMMARY.md  MIGRATE_character.sh  MIGRATION_GUIDE.md  README.md  STATUS_MIGRATION.md  character_impl.rs.txt  character_migration.rs.txt  character_reduced.rs.txt  character_trait.rs.txt  character_trait_impl.rs.txt  creature_integration.rs.txt  handlers_migration.rs.txt  migrate_character.sh  migrated_session_methods.rs.txt  quick_compat.rs.txt  quick_handlers.rs.txt  session_map_integration.rs.txt  stubs.rs.txt  temp_creature_storage.rs.txt
crates/wow-world/_attic/map/: coords.rs.txt  grid_loader.rs.txt  mod.rs.txt  visibility.rs.txt
crates/wow-world/src/: conditions.rs  entity_update_bridge.rs  lib.rs  map_manager.rs  phasing.rs  session.rs
crates/wow-world/src/handlers/: battlenet.rs  character.rs  chat.rs  combat.rs  group.rs  inspect.rs  loot.rs  misc.rs  mod.rs  movement.rs  quest.rs  social.rs  spell.rs  talent.rs  trainer.rs  vehicle.rs
crates/wow-world/src/phasing/: personal.rs
crates/wow-world/src/reputation/: mgr.rs  mod.rs
docs/: CPP_TO_RUST_PORTING_METHODOLOGY.md  MIGRATION_ROADMAP.md  world-entry-implementation.md
docs/audits/: movement.md
docs/migration/: _INDEX.md  _TEMPLATE.md  accounts.md  achievements.md  adr-runtime-tick-ownership.md  ai-base.md  ai-smartscripts.md  ai.md  anticheat.md  auctionhouse.md  auctionhousebot.md  battlefield.md  battlegrounds.md  battlepets.md  blackmarket.md  bnetserver.md  cache.md  calendar.md  chat.md  claude-porting-instructions.md  client-tools.md  combat-dealdamage.md  combat-manager.md  combat-threat.md  combat.md  commands.md  common-collision.md  common.md  conditions.md  config-reference.md  creature-port-no-gaps-plan.md  crypto.md  current-session-handoff.md  database-framework.md  datastores.md  db-schemas.md  dungeonfinding.md  entities-areatrigger.md  entities-conversation.md  entities-corpse.md  (+74 more)
docs/migration/inventory/: cpp-client-handlers.tsv  cpp-config-dynamic.tsv  r2-task-wbs.md  (+60 more)
docs/operations/: db-bootstrap.md  live-client-debug.md
docs/project-wiki/: README.md
(+5 files in other folders)
