[workspace]
resolver = "2"
members = [
    # Foundation
    "crates/wow-core",
    "crates/wow-constants",
    "crates/wow-config",
    "crates/wow-logging",
    "crates/wow-crypto",
    "crates/wow-math",
    "crates/wow-collections",
    # Infrastructure
    "crates/wow-database",
    "crates/wow-network",
    "crates/wow-proto",
    # ECS + Game Core
    "crates/wow-ecs",
    "crates/wow-world",
    "crates/wow-map",
    "crates/wow-movement",
    "crates/wow-entities",
    "crates/wow-spell",
    "crates/wow-combat",
    "crates/wow-ai",
    "crates/wow-packet",
    "crates/wow-handler",
    "crates/wow-chat",
    "crates/wow-social",
    "crates/wow-loot",
    "crates/wow-instances",
    "crates/wow-pvp",
    "crates/wow-achievement",
    "crates/wow-anticheat",
    "crates/wow-data",
    "crates/wow-script",
    "crates/wow-scripts",
    # FFI
    "crates/wow-recastdetour",
    # Executables
    "crates/bnet-server",
    "crates/world-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/user/rustycore"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "macros"] }

# Web framework (BNet REST)
axum = { version = "0.8", features = ["json"] }

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# Protobuf
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"

# ECS
hecs = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Flags and enums
bitflags = "2"
num-derive = "0.4"
num-traits = "0.2"
strum = { version = "0.26", features = ["derive"] }

# Cryptography
num-bigint = "0.4"
num-integer = "0.1"
aes-gcm = "0.10"
aes = "0.8"
hmac = "0.12"
sha2 = { version = "0.10", features = ["oid"] }
sha1 = "0.10"
argon2 = "0.5.3"
pbkdf2 = { version = "0.12", features = ["hmac"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rsa = "0.9"
pkcs8 = { version = "0.10.2", features = ["encryption", "pem", "std"] }
rand = "0.8"
digest = "0.10"

# Math
glam = "0.29"

# Concurrency
dashmap = "6"
parking_lot = "0.12"
flume = "0.11"
libc = "0.2"

# Registration (reflection replacement)
inventory = "0.3"

# Allocation
bumpalo = { version = "3", features = ["collections"] }

# Buffer management
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Compression
flate2 = "1"

# Small collections
smallvec = { version = "1", features = ["union", "const_generics"] }

# HTTP / Hyper
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2", "service"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Misc
once_cell = "1"
cfg-if = "1"

# Workspace crates
wow-core = { path = "crates/wow-core" }
wow-constants = { path = "crates/wow-constants" }
wow-config = { path = "crates/wow-config" }
wow-logging = { path = "crates/wow-logging" }
wow-crypto = { path = "crates/wow-crypto" }
wow-math = { path = "crates/wow-math" }
wow-collections = { path = "crates/wow-collections" }
wow-database = { path = "crates/wow-database" }
wow-network = { path = "crates/wow-network" }
wow-proto = { path = "crates/wow-proto" }
wow-ecs = { path = "crates/wow-ecs" }
wow-world = { path = "crates/wow-world" }
wow-map = { path = "crates/wow-map" }
wow-movement = { path = "crates/wow-movement" }
wow-entities = { path = "crates/wow-entities" }
wow-spell = { path = "crates/wow-spell" }
wow-combat = { path = "crates/wow-combat" }
wow-ai = { path = "crates/wow-ai" }
wow-packet = { path = "crates/wow-packet" }
wow-handler = { path = "crates/wow-handler" }
wow-chat = { path = "crates/wow-chat" }
wow-social = { path = "crates/wow-social" }
wow-loot = { path = "crates/wow-loot" }
wow-instances = { path = "crates/wow-instances" }
wow-pvp = { path = "crates/wow-pvp" }
wow-achievement = { path = "crates/wow-achievement" }
wow-anticheat = { path = "crates/wow-anticheat" }
wow-data = { path = "crates/wow-data" }
wow-script = { path = "crates/wow-script" }
wow-scripts = { path = "crates/wow-scripts" }
wow-recastdetour = { path = "crates/wow-recastdetour" }

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
