[package]
name = "wow-core"
description = "Core types: ObjectGuid, Position, time utilities, newtypes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bitflags = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
