[package]
name = "wow-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
wow-core = { workspace = true }
wow-constants = { workspace = true }
wow-database = { workspace = true }
wow-entities = { workspace = true }
anyhow = { workspace = true }
bitflags = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
