[package]
name = "wow-instances"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
wow-core = { workspace = true }
wow-data = { workspace = true }
wow-database = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
