[package]
name = "wow-map"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
wow-core = { workspace = true }
wow-entities = { workspace = true }
wow-ecs = { workspace = true }
wow-math = { workspace = true }
smallvec = { workspace = true }
bumpalo = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
wow-constants = { workspace = true }
