[package]
name = "wow-movement"
description = "Movement spline and MotionMaster runtime ported from TrinityCore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bitflags = { workspace = true }
wow-constants = { workspace = true }
wow-core = { workspace = true }

[lints]
workspace = true
