[package]
name = "wow-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
flume = { workspace = true }
dashmap = { workspace = true }
wow-core = { workspace = true }
wow-crypto = { workspace = true }
wow-packet = { workspace = true }
wow-constants = { workspace = true }
wow-data = { workspace = true }
wow-database = { workspace = true }
wow-instances = { workspace = true }
wow-loot = { workspace = true }
