[package]
name = "wow-world"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
flume = { workspace = true }
inventory = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
wow-core = { workspace = true }
wow-crypto = { workspace = true }
wow-constants = { workspace = true }
wow-ecs = { workspace = true }
wow-ai = { workspace = true }
wow-data = { workspace = true }
wow-database = { workspace = true }
wow-entities = { workspace = true }
wow-network = { workspace = true }
wow-logging = { workspace = true }
wow-loot = { workspace = true }
wow-packet = { workspace = true }
wow-handler = { workspace = true }
wow-instances = { workspace = true }
sqlx = { workspace = true }
